# modern-cpp-lib-template

./: .clang-tidy  .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md  annotated.html  annotated_dup.js  classCourse-members.html  classCourse.html  classCourse.js  classLinearSystemSolver-members.html  classLinearSystemSolver.html  classLinearSystemSolver.js  classStudent-members.html  classStudent.html  classStudent.js  classStudent__coll__graph.md5  classStudent__inherit__graph.map  classes.html  conanfile.py  dir_000003_000004.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_98bf9ada523eba00e80a6bec59b8a6ef.html  dir_98bf9ada523eba00e80a6bec59b8a6ef.js  dir_98bf9ada523eba00e80a6bec59b8a6ef_dep.map  dir_98bf9ada523eba00e80a6bec59b8a6ef_dep.md5  dir_9b5c2f4ffc75ec03dd92807094aed44f.html  dir_9b5c2f4ffc75ec03dd92807094aed44f.js  dir_9b5c2f4ffc75ec03dd92807094aed44f_dep.map  dir_9b5c2f4ffc75ec03dd92807094aed44f_dep.md5  dir_ac1bda40ac8ee1859bc2f4c384377610.html  dir_ac1bda40ac8ee1859bc2f4c384377610.js  dir_d2c52ae8e78557cf5609afa9a9654bfe.html  dir_d2c52ae8e78557cf5609afa9a9654bfe.js  dir_d2c52ae8e78557cf5609afa9a9654bfe_dep.map  dir_d2c52ae8e78557cf5609afa9a9654bfe_dep.md5  dir_da508971cd0f1fbd860d2f7f3b47b7bf.html  dir_da508971cd0f1fbd860d2f7f3b47b7bf.js  files.html  files_dup.js  (+34 more)
.conan/profiles/: build-debug  build-release  options-all  options-ci  options-coverage  options-doc  options-lib-warns  options-ql  ubuntu-clang14-amd64  ubuntu-gcc11-amd64  ubuntu-gcc12-amd64  windows-msvc2022-amd64
.github/workflows/: ci.yml  code-checks.yml  code-ql.yml  coverage.yml  deploy.yml  docs.yml
cmake/: ConfigSafeGuards.cmake  Docs.cmake  LTO.cmake  Sanitizer.cmake  Tools.cmake  Warnings.cmake
docs/: cicd.md  configuring.md  faq.md  index.md  tools.md  workflow.md
my_lib/: CMakeLists.txt
my_lib/include/my_lib/: config.hpp.in  my_lib.hpp
my_lib/include/my_lib/core/: solver.hpp
my_lib/include/my_lib/utils/: package_info.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  searchdata.js  variables_0.js
test/: CMakeLists.txt  lib_info_test.cpp  mytest1.cpp  mytest2.cpp
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
